[gd_scene load_steps=4 format=3 uid="uid://d05cimdugq3b"]

[ext_resource type="Script" path="res://Scripts/start.gd" id="1_0t7mv"]
[ext_resource type="FontFile" uid="uid://bpysbfonsgwh" path="res://assets/Fonts/Kenney Blocks.ttf" id="1_kssjb"]

[sub_resource type="LabelSettings" id="LabelSettings_r0bcr"]
font = ExtResource("1_kssjb")
font_size = 64

[node name="MainMenuContainer" type="CanvasLayer"]
script = ExtResource("1_0t7mv")

[node name="MainMenu" type="PanelContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 383.0
offset_top = 133.0
offset_right = -383.0
offset_bottom = -133.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="MainMenu"]
layout_mode = 2
theme_override_constants/margin_left = 15
theme_override_constants/margin_top = 15
theme_override_constants/margin_right = 15
theme_override_constants/margin_bottom = 15

[node name="VBoxContainer" type="VBoxContainer" parent="MainMenu/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="GameOver" type="Label" parent="MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_kssjb")
text = "Asteroids
"
label_settings = SubResource("LabelSettings_r0bcr")
horizontal_alignment = 1

[node name="SinglePlayer" type="Button" parent="MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_kssjb")
theme_override_font_sizes/font_size = 40
text = "Solo"

[node name="Host" type="Button" parent="MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_kssjb")
theme_override_font_sizes/font_size = 40
text = "Host"

[node name="Join" type="Button" parent="MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_kssjb")
theme_override_font_sizes/font_size = 40
text = "Join"

[node name="AddressEntry" type="LineEdit" parent="MainMenu/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_kssjb")
theme_override_font_sizes/font_size = 32
placeholder_text = "Enter IP"
alignment = 1

[connection signal="pressed" from="MainMenu/MarginContainer/VBoxContainer/SinglePlayer" to="." method="_on_single_player_pressed"]
[connection signal="pressed" from="MainMenu/MarginContainer/VBoxContainer/SinglePlayer" to="." method="_on_host_pressed"]
[connection signal="pressed" from="MainMenu/MarginContainer/VBoxContainer/Host" to="." method="_on_host_pressed"]
[connection signal="pressed" from="MainMenu/MarginContainer/VBoxContainer/Join" to="." method="_on_join_pressed"]
